# vfbLib

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  DESCRIPTION.md  NOTES.md  README-rust.md  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish_to_pypi.yml  tox.yml
HexFiend Template/: VFB.tcl
Lib/vfbLib/: __init__.py  cmdline.py  constants.py  cu2qu.py  diff.py  export.py  parsers.py  reader.py  testhelpers.py  truetype.py  tth.py  types.py  typing.py  ufo.py  value.py  version.py
Lib/vfbLib/compilers/: __init__.py  base.py  glyph.py  header.py  numeric.py  text.py  value.py
Lib/vfbLib/parsers/: __init__.py  base.py  binary.py  bitmap.py  cmap.py  fl3.py  glyph.py  guides.py  header.py  mm.py  numeric.py  options.py  pclt.py  ps.py  text.py  truetype.py  value.py
Lib/vfbLib/templates/: glyph.py
Lib/vfbLib/ufo/: __init__.py  builder.py  designspace.py  features.py  glyph.py  groups.py  guides.py  helpers.py  info.py  kerning.py  paths.py  pshints.py  time.py  tth.py  types.py  typing.py  vfb2ufo.py
Lib/vfbLib/vfb/: __init__.py  entry.py  glyph.py  header.py  info.py  pens.py  vfb.py
Reverse/: 01 Empty.json  01 Empty.vfb  02 A empty diff width class.json  02 A empty diff width class.vfb  02 A empty diff width no bg.json  02 A empty diff width no bg.vfb  02 A empty diff width.json  02 A empty diff width.vfb  02 A empty.json  02 A empty.vfb  03 A 1 point 255.json  03 A 1 point 255.vfb  03 A 1 point.json  03 A 1 point.vfb  04.json  04.vfb  decode.py  image.md
Scripts/: DrawBot.py
Tests/: bitmap_test.py  cmdline_test.py  constants_test.py  cu2qu_test.py  guides_test.py  helpers_test.py  parsers_test.py  smoke_test.py  test.py  tth_export_test.py  ufo_test.py  vfb_test.py
Tests/Data/: BinaryImport.tth.toml  BinaryImport.vfb  BinaryImport.vfb.json  ComicJensPro-Regular.tth.json  ComicJensPro-Regular.tth.toml  ComicJensPro-Regular.tth.yaml  ComicJensPro-Regular.vfb  ComicJensPro-Regular.vfb.json  ComicJensPro-Regular3.000.tth.toml  ComicJensPro-Regular3.000.vfb  FontNames.tth.toml  FontNames.vfb  FontNames.vfb.json  IBM Plex Serif-Text Italic.json  IBM Plex Serif-Text.json  IBM Plex Serif-Text.vfb  IBMPlexSans-Medium.tth.json  IBMPlexSans-Medium.tth.toml  IBMPlexSans-Medium.tth.yaml  IBMPlexSerif-Text.tth.json  IBMPlexSerif-Text.tth.toml  IBMPlexSerif-Text.tth.yaml  IBMPlexSerif-Text.vfb  IBMPlexSerif-Text.vfj  IBMPlexSerif-TextItalic.tth.json  IBMPlexSerif-TextItalic.tth.toml  IBMPlexSerif-TextItalic.tth.yaml  IBMPlexSerif-TextItalic.vfj  Makefile  closepath.ttf.ttx  closepath.vfb  closepath.vfb.json  cu2qu.vfb  cu2qu.vfb.json  cu2qu_2m.designspace  cu2qu_2m.tth.json  cu2qu_2m.tth.toml  cu2qu_2m.tth.yaml  cu2qu_2m.vfb  cu2qu_2m.vfb.json  (+44 more)
Tests/Data/BinaryImport.ufo/: features.fea  fontinfo.plist  lib.plist
Tests/Data/ComicJensPro-Regular.ufo/: features.fea  fontinfo.plist  groups.plist  kerning.plist  lib.plist  metainfo.plist
Tests/Data/ComicJensPro-Regular3.000.ttf.ufo/: fontinfo.plist  kerning.plist  lib.plist
Tests/Data/ComicJensPro-Regular3.000.ufo/: fontinfo.plist  groups.plist
Tests/Data/FontNames.ufo/: fontinfo.plist
Tests/Data/IBM Plex Sans-Medium.ufo/: lib.plist
Tests/Data/IBM Plex Serif-Text Italic.ufo/: features.fea  fontinfo.plist  lib.plist
Tests/Data/IBM Plex Serif-Text.ufo/: features.fea  fontinfo.plist  lib.plist
Tests/Data/IBMPlexSans-Medium.ufo/: features.fea  fontinfo.plist
Tests/Data/IBMPlexSerif-Text.ufo/: features.fea  fontinfo.plist
Tests/Data/IBMPlexSerif-TextItalic.ufo/: fontinfo.plist  lib.plist
Tests/Data/closepath.ufo/: fontinfo.plist  lib.plist  metainfo.plist
Tests/Data/cu2qu.ufo/: fontinfo.plist
Tests/Data/cu2qu_2m-1.ufo/: fontinfo.plist  kerning.plist
Tests/Data/cu2qu_2m.ufo/: fontinfo.plist  kerning.plist  lib.plist
Tests/Data/empty_504.ufo/: fontinfo.plist  lib.plist
Tests/Data/empty_522.ufo/: fontinfo.plist
Tests/Data/globalmask.ufo/: fontinfo.plist
Tests/Data/hintrep.ufo/: fontinfo.plist  lib.plist
Tests/Data/imported_glyph.ufo/: features.fea  lib.plist
Tests/Data/mask-3.ufo/: lib.plist
Tests/Data/mask.ufo/: fontinfo.plist
Tests/Data/masters-1.ufo/: kerning.plist  lib.plist
Tests/Data/masters-2.ufo/: groups.plist  kerning.plist  lib.plist
Tests/Data/masters-3.ufo/: fontinfo.plist  groups.plist  kerning.plist  lib.plist
Tests/Data/masters.ufo/: features.fea  groups.plist  kerning.plist
Tests/Data/mm_anchors.ufo/: fontinfo.plist  lib.plist
Tests/Data/sketch.ufo/: fontinfo.plist  lib.plist
Tests/Data/test.ufo/: fontinfo.plist  lib.plist
Tests/Data/truetype_stems.ufo/: fontinfo.plist  lib.plist
Tests/compilers/: base_compiler_test.py  bitmap_compiler_test.py  compilers_test.py  flversion_compiler_test.py  glyph_compiler_test.py  glyph_test.py  header_compiler_test.py  mm_compiler_test.py  options_compiler_test.py  ps_compiler_test.py  text_compiler_test.py  truetype_compiler_test.py  value_encoder_test.py  value_test.py
Tests/parsers/: bitmap_test.py  glyph_test.py  numeric_test.py  parsers_test.py  pclt_test.py  text_test.py  truetype_test.py  value_decoder_test.py
Tests/ufo/: groups_test.py  kerning_test.py  paths_test.py  pshints_test.py  time_test.py  vfbtoufobuilder_test.py
Tests/vfb/: glyph_test.py  vfb_glyph_test.py  vfb_test.py
docs/: Decompile glyph.txt  Decompile.txt  Hinting.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/_autosummary/: vfbLib.cmdline.rst  vfbLib.cmdline.vfb2json.rst  vfbLib.cmdline.vfb2ufo.rst  vfbLib.compilers.base.BaseCompiler.rst  vfbLib.compilers.base.EncodedValueListCompiler.rst  vfbLib.compilers.base.EncodedValueListWithCountCompiler.rst  vfbLib.compilers.base.GlyphEncodingCompiler.rst  vfbLib.compilers.base.HexStringCompiler.rst  vfbLib.compilers.base.MappingModeCompiler.rst  vfbLib.compilers.base.StreamWriter.rst  (+302 more)
src/: lib.rs
src/vfbLib/: __init__.py  cmdline.py  constants.py  cu2qu.py  diff.py  enum.py  helpers.py  json.py  truetype.py  tth.py  typing.py  value.py
zsh-completions/: _vfb2json  _vfb3ufo
(+9126 files in other folders)
