[project]
name = "vfbLib"
dynamic = ["version"]
description = "Tools for converting FontLab Studio 5 (VFB) files."
keywords = ["vfb", "vfbLib", "fonttools"]

readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

authors = [{ name = "Jens Kutílek", email = "webmail@kutilek.de" }]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.10"
dependencies = [
    "fonttools[ufo] >= 4.59.0",
    "orjson >= 3.11.1, < 4",
    "typing_extensions >= 4.14.1",
    "ufonormalizer >= 0.6.1",
    "ufoLib2[json] >= 0.18.1",
]

[project.optional-dependencies]
toml = ["tomli-w >= 1.0.0"]
yaml = ["pyyaml >= 6.0.2"]
all = ["vfbLib[toml]", "vfbLib[yaml]"]

test = [
    "coverage",
    "flake8",
    # "mypy",
    "pytest",
    "ruff",
    "types-pyyaml",
]

dev = [
    "build",                # packaging build frontend
    "flake8",
    "mypy",
    "wheel",                # build system (also downloaded during build)
    "ruff",
    "setuptools-scm[toml]", # git tags-based versioning (also downloaded during build)
    "types-pyyaml",
]

doc = [
    "sphinx >= 8.1.3", # documentation generator
    "sphinx_rtd_theme",
]

[project.urls]
"Homepage" = "https://github.com/LucasFonts/vfbLib"
"Documentation" = "https://vfblib.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/LucasFonts/vfbLib/issues"
"Changelog" = "https://github.com/LucasFonts/vfbLib/blob/main/CHANGELOG.md"

[project.scripts]
vfb2json = "vfbLib.cmdline:vfb2json"
vfb2tth = "vfbLib.tth:vfb2tth"
vfb3ufo = "vfbLib.cmdline:vfb2ufo"
vfbcu2qu = "vfbLib.cu2qu:vfbcu2qu"
vfbdiff = "vfbLib.diff:diffvfb"
# yuri = vfbLib.value:yuri

[build-system]
requires = ["setuptools>=78.0.2", "setuptools-scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"vfbLib" = ["py.typed"] # PEP 561

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
write_to = "src/vfbLib/_version.py"

[tool.pylint.main]
py-version = "3.10"
ignore-paths = ["src/vfbLib/_version.py"]
# extension-pkg-allow-list = ["pycurl"]

[tool.pylint.format]
expected-line-ending-format = "LF"
max-line-length = 88

[tool.black]
exclude = '[\\/]_version\.py$'
line-length = 88
target-version = ["py310"]

[tool.ruff.lint.isort]
known-first-party = ["vfbLib"]
