[project]
name = "vfbLib"
description = "Tools for converting FontLab Studio 5 (VFB) files."
keywords = ["vfb", "vfbLib", "fonttools"]
version = "0.11.4"

readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

authors = [{ name = "Jens Kutílek", email = "webmail@kutilek.de" }]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">=3.11"
dependencies = [
    "fonttools[ufo] >= 4.63.0",
    "orjson >= 3.11.9, < 4",
    "typing_extensions >= 4.15.0",
    "ufonormalizer >= 0.6.3",
    "ufoLib2[json] >= 0.18.1",
]

[dependency-groups]
dev = [
    "flake8",
    "mypy",
    "ruff",
    "types-pyyaml",
]
test = [
    { include-group = "dev"},
    "pytest",
    "pytest-cov",
    "tox",
    "tox-gh",
    "tox-uv",
]

[project.optional-dependencies]
toml = [
    "tomli-w >= 1.2.0"
]
yaml = [
    "pyyaml >= 6.0.3"
]
all = [
    "vfbLib[toml]",
    "vfbLib[yaml]",
]
doc = [
    "sphinx >= 9.0.0",  # Update to 9.1.0 when we drop Python 3.11
    "sphinx_rtd_theme",
]

[project.urls]
"Homepage" = "https://github.com/LucasFonts/vfbLib"
"Documentation" = "https://vfblib.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/LucasFonts/vfbLib/issues"
"Changelog" = "https://github.com/LucasFonts/vfbLib/blob/main/CHANGELOG.md"

[project.scripts]
vfb2json = "vfbLib.cmdline:vfb2json"
vfb2tth = "vfbLib.tth:vfb2tth"
vfb3ufo = "vfbLib.cmdline:vfb2ufo"
vfbcu2qu = "vfbLib.cu2qu:vfbcu2qu"
vfbdiff = "vfbLib.diff:diffvfb"
yuri = "vfbLib.value:yuri"

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"


[tool.coverage.paths]
source = ["src", ".tox/py*/**/site-packages"]


[tool.ruff]
extend-exclude =  ["Scripts"]


[tool.ruff.lint.isort]
known-first-party = ["vfbLib"]


[tool.uv.build-backend]
module-name = "vfbLib"
# module-root = "src"
