[metadata]
name = vfbLib
version = 0.1.0
description = Tools for converting FontLab Studio 5 (VFB) files.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://pypi.org/project/vfblib/
author = Jens Kutilek
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
project_urls = 
    #  Documentation = https://vfblib.readthedocs.io/en/latest/
     Source = https://github.com/LucasFonts/vfbLib
     Tracker = https://github.com/LucasFonts/vfbLib/issues

[options]
zip_safe = False
package_dir=
    =Lib
packages=find:
platforms = any
install_requires =
    defcon
    fonttools[ufo]
    typing_extensions
    ufonormalizer
python_requires = >=3.8

[options.packages.find]
where=Lib

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    vfb2json = vfbLib.cmdline:vfb2json
    vfb3ufo = vfbLib.cmdline:vfb2ufo
    normalize_vfb2ufo = vfbLib.ufo.helpers:normalize

[flake8]
select = B, C, E, F, W, T4, B9
ignore = W503
max-line-length = 88
max-complexity = 19
exclude = .git, __pycache__, build, dist, .eggs, .tox
