[metadata]
name = vfbLib
version = 0.8.0
description = Tools for converting FontLab Studio 5 (VFB) files.
long_description = file: DESCRIPTION.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://pypi.org/project/vfblib/
author = Jens Kutilek
license = GPLv3
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Environment :: Console
project_urls = 
    #  Documentation = https://vfblib.readthedocs.io/en/latest/
     Source = https://github.com/LucasFonts/vfbLib
     Tracker = https://github.com/LucasFonts/vfbLib/issues

[options]
zip_safe = False
package_dir=
    =Lib
packages=find:
platforms = any
install_requires =
    fonttools[ufo] >= 4.45.1
    typing_extensions >= 4.8.0
    ufonormalizer >= 0.6.1
    ufoLib2 >= 0.16.0

python_requires = >=3.10

[options.packages.find]
where=Lib

[options.entry_points]
console_scripts =
    vfb2json = vfbLib.cmdline:vfb2json
    vfb3ufo = vfbLib.cmdline:vfb2ufo
    vfbcu2qu = vfbLib.cu2qu:vfbcu2qu
    vfbdiff = vfbLib.diff:diffvfb
    ; yuri = vfbLib.value:yuri

[flake8]
select = B, C, E, F, W, T4, B9
ignore = W503
max-line-length = 88
max-complexity = 19
exclude = .git, __pycache__, build, dist, .eggs, .tox
